src/screens/MovieDetails/movie_details.module.scss
@import '../../../sass/mixins';
@import '../../../sass/animations';

.movieDetails {
	@include general-screen-style;

	&__header {
		display: flex;
		align-items: baseline;
		justify-content: space-between;
		margin-left: 1rem;

		@include respond(phone) {
			flex-direction: column-reverse;
		}

		& div:first-of-type {
			margin-bottom: 3rem;
		}

		& div:last-of-type {
			margin-bottom: 2.5rem;
		}
	}

	& h1 {
		text-transform: uppercase;
		font-size: 2.4rem;
		font-weight: var(--font-weight-semi-bold);
	}

	& h2 {
		font-size: 2rem;
	}

	&__title {
		text-transform: uppercase;
		font-weight: var(--font-weight-semi-bold);
	}
	& ul {
		& li {
			font-size: 2rem;
			margin-bottom: 1rem;
			& span {
				font-weight: var(--font-weight-semi-bold);
			}
		}
	}
	.primary_link {
		text-transform: uppercase;
		margin-right: 1.5rem;
		font-weight: var(--font-weight-semi-bold);
		@include primary_link;
	}

	&__details {
		display: grid;
		place-items: center;
		text-align: center;
		margin: 5rem 0;

		& ul:first-of-type {
			display: flex;
			gap: 2rem;
		}

		& .ratings {
			display: inline-flex;
			align-items: baseline;
			gap: 1rem;
			font-weight: var(--font-weight-bold);

			& span {
				display: inline-block;
				margin-top: -3px;
				font-size: 2rem;
			}
		}
	}

	.logoBox {
		display: flex;
		align-items: center;
		gap: 1.5rem;
	}

	.detailsBox {
		display: block;

		& > p {
			font-size: 2rem;
			text-align: center;
		}

		& > h3 {
			margin-bottom: 0.5rem;
		}
		margin-bottom: 2rem;
	}

	.cast {
		width: 30rem;
	}
}

